# chess-engine

./: Cargo.toml  example_board.txt  mat_in_one.txt  perf.sh
.github/workflows/: rust.yml
src/: bench.rs  board.rs  main.rs  test.rs
