[package]
name = "chess"
version = "0.1.0"
authors = ["Mateusz Kojro <mateuszkojro@outloook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[unstable]
with-bench='true'

[[bench]]
name = "test"           # The name of the target.
path = "src/bench.rs"    # The source file of the target.
test = true            # Is tested by default.
doctest = true         # Documentation examples are tested by default.
bench = true           # Is benchmarked by default.
doc = true   

[dependencies]
